<resources>
    <string name="app_name">TraceTogether</string>

    // module 1
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="btn_login">Login</string>
    <string name="Spinner">spinner</string>
    <string name="_usertype">Usertype</string>
    <string name="todo">TODO</string>
    <string name="btn_add_dependent">Add Dependent</string>
    <string name="btn_register">Register</string>
    <string name="user_name_rg">User Name</string>
    <string name="full_name_rg">Full name</string>
    <string name="nric_passport_rg">NRIC/Passport</string>
    <string name="email_address_rg">Email/PhoneNum</string>
    <string name="age_rg">Age</string>
    <string name="Password_rg">Password</string>
    <string name="Re_enter_password_rg">Re-enter password</string>
    <string name="enter_otp_number_rg1">Enter OTP number</string>
    <string name="btn_next_rg_page2">NEXT</string>
    <string name="submit_rg">Submit</string>
    <string name="savebtn_tgr_id">Save</string>
    <string name="english_language">English</string>
    <string name="malay_language">Malay</string>
    <string name="username_personal">SALEH AHMED BIN SALEH</string>

    <string-array name="usertype">
        <item>user</item>
        <item>admin</item>
        <item>MOH-User</item>
    </string-array>

    // checkin
    <string name="check_in">Check-In</string>
    <string name="history">History</string>
    <string name="vaccination_status">Vaccination Status</string>
    <string name="full_name">Full Name</string>
    <string name="textview">TextView</string>
    <string name="backgroundpage">backgroundpage</string>
    <string name="check_inb">Check-In</string>
    <string name="dec_16_2022">Dec 16, 2022</string>
    <string name="view_all">View All</string>
    <string name="historyText">History</string>
    <string name="user_nric">User NRIC</string>
    <string name="user_full_name">User Full Name</string>
    <string name="view_allB">View All</string>
    <string name="generate_qr_code_for_your_place">Generate QR Code For Your Place</string>
    <string name="your_place">Your Place</string>
    <string name="check_inTitle">Check In</string>
    <string name="time">11:01:07 PM</string>
    <string name="place">Restoran Farouk Sithick</string>
    <string name="titlevasStatus">Covid-19 Vaccination Status</string>
    <string name="status_vac">Fully Vaccinated</string>
    <string name="risk_status">Covid-19 Status Risk</string>
    <string name="statusRisk">Low Risk and No Symptom</string>
    <string name="check_in_succesful">Check-In Succesful</string>
    <string name="check_in_information">Check-In Information</string>
    <string name="quarantine">Quarantine</string>
    <string name="what_you_need_to_do">What you need to do</string>
    <string name="todo1">TODO</string>

</resources>

