<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wavetop"
    android:elevation="42dp"
    tools:context=".Application.Login.Login">

    <Button
        android:id="@+id/btn_login"
        android:layout_width="178dp"
        android:layout_height="51dp"
        android:background="@drawable/btn_shape"
        android:elevation="12dp"
        android:stateListAnimator="@null"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.729" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="178dp"
        android:layout_height="51dp"
        android:text="@string/btn_register"
        android:stateListAnimator="@null"
        android:textColor="@color/white"
        android:elevation="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.847"
        android:background="@drawable/btn_shape"/>

    <EditText
        android:id="@+id/phoneNo"
        android:layout_width="301dp"
        android:layout_height="49dp"
        android:background="@drawable/custome_input"
        android:drawableLeft="@drawable/ic_baseline_phone_android_24"
        android:drawablePadding="4dp"
        android:ems="10"
        android:hint="Phone Number"
        android:inputType="number"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text=""
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.645"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.325" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="140dp"
        android:layout_height="49dp"
        android:contentDescription="@string/Spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.566"
        app:layout_editor_absoluteX="161dp"
        app:layout_editor_absoluteY="175dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="301dp"
        android:layout_height="49dp"
        android:autofillHints=""
        android:background="@drawable/custome_input"
        android:drawablePadding="1dp"
        android:drawableLeft="@drawable/ic_icon_lock_24"
        android:paddingLeft="10dp"
        android:ems="10"
        android:text=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.645"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="95dp"
        android:layout_height="84dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@drawable/logo_modified" />

    <TextView
        android:id="@+id/usertype"
        android:layout_width="140dp"
        android:layout_height="49dp"
        android:background="@drawable/custome_input"
        android:text="@string/_usertype"
        android:paddingTop="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.565" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="188dp"
        android:layout_height="32dp"
        android:text="TraceTogether App"
        android:textColor="#F4F4F4"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143" />

</androidx.constraintlayout.widget.ConstraintLayout>