<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wavetop"
    tools:context=".Application.Registration.Registration_4"
    >

<!--
    <Button
        android:id="@+id/button3"
        android:layout_width="178dp"
        android:layout_height="51dp"
        android:background="@drawable/btn_shape"
        android:text="@string/submit_rg"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.906"


        />
        -->


    <TextView
        android:layout_width="227dp"
        android:layout_height="38dp"
        android:fontFamily="sans-serif-black"
        android:text="Registration Page"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.023" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout7"
        android:layout_width="362dp"
        android:layout_height="357dp"
        android:background="@drawable/white_background"
        android:elevation="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/textView11"
            android:layout_width="227dp"
            android:layout_height="48dp"
            android:background="@drawable/custome_input"
            android:hint="@string/Re_enter_password_rg"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:text=""
            android:textAlignment="textStart"
            android:textSize="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.453" />

        <EditText
            android:id="@+id/textView9"
            android:layout_width="227dp"
            android:layout_height="48dp"
            android:background="@drawable/custome_input"
            android:hint="@string/Password_rg"
            android:inputType="textPassword"
            android:paddingLeft="8dp"
            android:text=""
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.223" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="231dp"
            android:layout_height="54dp"
            android:text="Password shall contains :At least 5 Lower and Upper case letters ,10 characters tow special character."
            android:textSize="11dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.732" />

        <TextView
            android:layout_width="227dp"
            android:layout_height="38dp"
            android:text="Create password Page"
            android:textAlignment="center"
            android:textColor="@color/black"

            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.021" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button9"
        android:layout_width="144dp"
        android:layout_height="52dp"
        android:background="@drawable/btn_shape"
        android:elevation="12dp"
        android:stateListAnimator="@null"
        android:text="@string/submit_rg"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92" />


</androidx.constraintlayout.widget.ConstraintLayout>