<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/wavetop"
    tools:context=".Application.Dependent.Add_Dependent">

    <Button
        android:id="@+id/Add_Depen_button"
        android:layout_width="156dp"
        android:layout_height="57dp"
        android:background="@drawable/btn_shape"
        android:text="ِAdd Dependdent"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Dependent "
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="366dp"
        android:layout_height="444dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/white_background"
        android:elevation="12dp">

        <EditText
            android:id="@+id/textView11"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custome_input"
            android:hint="Relation"
            android:inputType="text"
            android:paddingLeft="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintVertical_bias="0.0"
            />

        <EditText
            android:id="@+id/textView7"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custome_input"
            android:hint="@string/nric_passport_rg"
            android:inputType="number"
            android:paddingLeft="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/textView8"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custome_input"
            android:hint="@string/age_rg"
            android:inputType="number"
            android:paddingLeft="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintVertical_bias="0.012" />

        <EditText
            android:id="@+id/textView6"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:background="@drawable/custome_input"
            android:hint="@string/full_name_rg"
            android:inputType="text"
            android:paddingLeft="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.134" />

        <EditText
            android:id="@+id/textView10"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/custome_input"
            android:hint="Phone Number "
            android:inputType="phone"
            android:paddingLeft="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/textView9"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custome_input"
            android:hint="State"
            android:inputType="text"
            android:paddingLeft="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>