<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wavetop"
    tools:context=".Application.Registration.Registration_3"
    >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="227dp"
        android:layout_height="38dp"
        android:fontFamily="sans-serif-black"
        android:text="Registeration page"
        android:textColor="#E6E6E6"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/Register_btn"
        android:layout_width="178dp"
        android:layout_height="51dp"
        android:background="@drawable/btn_shape"
        android:elevation="12dp"
        android:stateListAnimator="@null"
        android:text="Register"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="366dp"
        android:layout_height="444dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/white_background"
        android:elevation="12dp">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="Step 3"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.037" />

        <EditText
            android:id="@+id/textView11"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custome_input"
            android:hint="Relation"
            android:inputType="text"
            android:paddingLeft="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/textView7"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custome_input"
            android:hint="@string/nric_passport_rg"
            android:inputType="number"
            android:paddingLeft="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/textView8"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custome_input"
            android:hint="@string/age_rg"
            android:inputType="number"
            android:paddingLeft="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintVertical_bias="0.012" />

        <EditText
            android:id="@+id/textView6"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:background="@drawable/custome_input"
            android:hint="@string/full_name_rg"
            android:inputType="text"
            android:paddingLeft="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.134" />

        <EditText
            android:id="@+id/textView10"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/custome_input"
            android:hint="Phone Number "
            android:inputType="phone"
            android:paddingLeft="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/textView9"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custome_input"
            android:hint="State"
            android:inputType="text"
            android:paddingLeft="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

